// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers infoReducer should handle GET_INFO 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "chain": null,
    "chains": Object {
      "bitcoin": Object {
        "name": "Bitcoin",
      },
    },
    "data": Object {},
    "hasSynced": undefined,
    "infoLoaded": false,
-   "infoLoading": false,
+   "infoLoading": true,
    "network": null,
    "networks": Object {
      "bitcoin": Object {
        "mainnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "bc",
            "bip32": Object {
              "private": 76066276,
              "public": 76067358,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 8333,
            "portRpc": 8332,
            "protocol": Object {
              "magic": 3652501241,
            },
            "pubKeyHash": 0,
            "scriptHash": 5,
            "seedsDns": Array [
              "seed.bitcoin.sipa.be",
              "dnsseed.bluematt.me",
              "seed.bitcoinstats.com",
              "seed.bitcoin.jonasschnelli.ch",
              "seed.btc.petertodd.org",
              "seed.bitcoin.sprovoost.nl",
              "dnsseed.emzy.de",
            ],
            "testnet": false,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 76066276,
                "public": 76067358,
              },
              "bip44": 0,
              "private": 128,
              "public": 0,
              "scripthash": 5,
            },
            "wif": 128,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "mainnet",
          "name": "Mainnet",
          "unitPrefix": "",
        },
        "regtest": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "bcrt",
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "0f9188f13cb7b2c71f2a335e3a4fc328bf5beb436012afca590b1a11466e2206",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18444,
            "portRpc": 18332,
            "protocol": Object {
              "magic": 3669344250,
            },
            "pubKeyHash": 111,
            "scriptHash": 196,
            "seedsDns": Array [],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 70615956,
                "public": 70617039,
              },
              "bip44": 1,
              "private": 239,
              "public": 111,
              "scripthash": 196,
            },
            "wif": 239,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "regtest",
          "name": "Regtest",
          "unitPrefix": "r",
        },
        "simnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "sb",
            "bip32": Object {
              "private": 69253376,
              "public": 69254458,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "f67ad7695d9b662a72ff3d8edbbb2de0bfa67b13974bb9910d116d5cbd863e68",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18555,
            "portRpc": 18556,
            "protocol": Object {
              "magic": 3669344250,
            },
            "pubKeyHash": 63,
            "scriptHash": 123,
            "seedsDns": Array [],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 69253376,
                "public": 69254458,
              },
              "bip44": 115,
              "private": 100,
              "public": 63,
              "scripthash": 123,
            },
            "wif": 100,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "simnet",
          "name": "Simnet",
          "unitPrefix": "s",
        },
        "testnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "tb",
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "000000000933ea01ad0ee984209779baaec3ced90fa3f408719526f8d77f4943",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18333,
            "portRpc": 18332,
            "protocol": Object {
              "magic": 118034699,
            },
            "pubKeyHash": 111,
            "scriptHash": 196,
            "seedsDns": Array [
              "testnet-seed.alexykot.me",
              "testnet-seed.bitcoin.schildbach.de",
              "testnet-seed.bitcoin.petertodd.org",
              "testnet-seed.bluematt.me",
            ],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 70615956,
                "public": 70617039,
              },
              "bip44": 1,
              "private": 239,
              "public": 111,
              "scripthash": 196,
            },
            "wif": 239,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc-testnet",
            "blockstream": "https://blockstream.info/testnet",
            "smartbit": "https://testnet.smartbit.com.au",
          },
          "id": "testnet",
          "name": "Testnet",
          "unitPrefix": "t",
        },
      },
    },
  }
`;

exports[`reducers infoReducer should handle RECEIVE_INFO 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
-   "chain": null,
+   "chain": "bitcoin",
    "chains": Object {
      "bitcoin": Object {
        "name": "Bitcoin",
      },
    },
-   "data": Object {},
+   "data": Object {
+     "chains": Array [
+       Object {
+         "chain": "bitcoin",
+         "network": "mainnet",
+       },
+     ],
+     "semver": "0.5.2",
+   },
    "hasSynced": undefined,
-   "infoLoaded": false,
+   "infoLoaded": true,
    "infoLoading": false,
-   "network": null,
+   "network": "mainnet",
    "networks": Object {
      "bitcoin": Object {
        "mainnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "bc",
            "bip32": Object {
              "private": 76066276,
              "public": 76067358,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 8333,
            "portRpc": 8332,
            "protocol": Object {
              "magic": 3652501241,
            },
            "pubKeyHash": 0,
            "scriptHash": 5,
            "seedsDns": Array [
              "seed.bitcoin.sipa.be",
              "dnsseed.bluematt.me",
              "seed.bitcoinstats.com",
              "seed.bitcoin.jonasschnelli.ch",
              "seed.btc.petertodd.org",
              "seed.bitcoin.sprovoost.nl",
              "dnsseed.emzy.de",
            ],
            "testnet": false,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 76066276,
                "public": 76067358,
              },
              "bip44": 0,
              "private": 128,
              "public": 0,
              "scripthash": 5,
            },
            "wif": 128,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "mainnet",
          "name": "Mainnet",
          "unitPrefix": "",
        },
        "regtest": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "bcrt",
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "0f9188f13cb7b2c71f2a335e3a4fc328bf5beb436012afca590b1a11466e2206",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18444,
            "portRpc": 18332,
            "protocol": Object {
              "magic": 3669344250,
            },
            "pubKeyHash": 111,
            "scriptHash": 196,
            "seedsDns": Array [],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 70615956,
                "public": 70617039,
              },
              "bip44": 1,
              "private": 239,
              "public": 111,
              "scripthash": 196,
            },
            "wif": 239,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "regtest",
          "name": "Regtest",
          "unitPrefix": "r",
        },
        "simnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "sb",
            "bip32": Object {
              "private": 69253376,
              "public": 69254458,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "f67ad7695d9b662a72ff3d8edbbb2de0bfa67b13974bb9910d116d5cbd863e68",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18555,
            "portRpc": 18556,
            "protocol": Object {
              "magic": 3669344250,
            },
            "pubKeyHash": 63,
            "scriptHash": 123,
            "seedsDns": Array [],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 69253376,
                "public": 69254458,
              },
              "bip44": 115,
              "private": 100,
              "public": 63,
              "scripthash": 123,
            },
            "wif": 100,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "simnet",
          "name": "Simnet",
          "unitPrefix": "s",
        },
        "testnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "tb",
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "000000000933ea01ad0ee984209779baaec3ced90fa3f408719526f8d77f4943",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18333,
            "portRpc": 18332,
            "protocol": Object {
              "magic": 118034699,
            },
            "pubKeyHash": 111,
            "scriptHash": 196,
            "seedsDns": Array [
              "testnet-seed.alexykot.me",
              "testnet-seed.bitcoin.schildbach.de",
              "testnet-seed.bitcoin.petertodd.org",
              "testnet-seed.bluematt.me",
            ],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 70615956,
                "public": 70617039,
              },
              "bip44": 1,
              "private": 239,
              "public": 111,
              "scripthash": 196,
            },
            "wif": 239,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc-testnet",
            "blockstream": "https://blockstream.info/testnet",
            "smartbit": "https://testnet.smartbit.com.au",
          },
          "id": "testnet",
          "name": "Testnet",
          "unitPrefix": "t",
        },
      },
    },
  }
`;

exports[`reducers infoReducer should handle SET_HAS_SYNCED 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "chain": null,
    "chains": Object {
      "bitcoin": Object {
        "name": "Bitcoin",
      },
    },
    "data": Object {},
-   "hasSynced": undefined,
+   "hasSynced": true,
    "infoLoaded": false,
    "infoLoading": false,
    "network": null,
    "networks": Object {
      "bitcoin": Object {
        "mainnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "bc",
            "bip32": Object {
              "private": 76066276,
              "public": 76067358,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 8333,
            "portRpc": 8332,
            "protocol": Object {
              "magic": 3652501241,
            },
            "pubKeyHash": 0,
            "scriptHash": 5,
            "seedsDns": Array [
              "seed.bitcoin.sipa.be",
              "dnsseed.bluematt.me",
              "seed.bitcoinstats.com",
              "seed.bitcoin.jonasschnelli.ch",
              "seed.btc.petertodd.org",
              "seed.bitcoin.sprovoost.nl",
              "dnsseed.emzy.de",
            ],
            "testnet": false,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 76066276,
                "public": 76067358,
              },
              "bip44": 0,
              "private": 128,
              "public": 0,
              "scripthash": 5,
            },
            "wif": 128,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "mainnet",
          "name": "Mainnet",
          "unitPrefix": "",
        },
        "regtest": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "bcrt",
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "0f9188f13cb7b2c71f2a335e3a4fc328bf5beb436012afca590b1a11466e2206",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18444,
            "portRpc": 18332,
            "protocol": Object {
              "magic": 3669344250,
            },
            "pubKeyHash": 111,
            "scriptHash": 196,
            "seedsDns": Array [],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 70615956,
                "public": 70617039,
              },
              "bip44": 1,
              "private": 239,
              "public": 111,
              "scripthash": 196,
            },
            "wif": 239,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "regtest",
          "name": "Regtest",
          "unitPrefix": "r",
        },
        "simnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "sb",
            "bip32": Object {
              "private": 69253376,
              "public": 69254458,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "f67ad7695d9b662a72ff3d8edbbb2de0bfa67b13974bb9910d116d5cbd863e68",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18555,
            "portRpc": 18556,
            "protocol": Object {
              "magic": 3669344250,
            },
            "pubKeyHash": 63,
            "scriptHash": 123,
            "seedsDns": Array [],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 69253376,
                "public": 69254458,
              },
              "bip44": 115,
              "private": 100,
              "public": 63,
              "scripthash": 123,
            },
            "wif": 100,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc",
            "blockstream": "https://blockstream.info",
            "smartbit": "https://www.smartbit.com.au",
          },
          "id": "simnet",
          "name": "Simnet",
          "unitPrefix": "s",
        },
        "testnet": Object {
          "bitcoinJsNetwork": Object {
            "bech32": "tb",
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "dustThreshold": null,
            "hashGenesisBlock": "000000000933ea01ad0ee984209779baaec3ced90fa3f408719526f8d77f4943",
            "messagePrefix": "Bitcoin Signed Message:
  ",
            "name": "Bitcoin",
            "per1": 100000000,
            "port": 18333,
            "portRpc": 18332,
            "protocol": Object {
              "magic": 118034699,
            },
            "pubKeyHash": 111,
            "scriptHash": 196,
            "seedsDns": Array [
              "testnet-seed.alexykot.me",
              "testnet-seed.bitcoin.schildbach.de",
              "testnet-seed.bitcoin.petertodd.org",
              "testnet-seed.bluematt.me",
            ],
            "testnet": true,
            "toBitcoinJS": [Function bound toBitcoinJS],
            "toBitcore": [Function bound toBitcore],
            "unit": "BTC",
            "versions": Object {
              "bip32": Object {
                "private": 70615956,
                "public": 70617039,
              },
              "bip44": 1,
              "private": 239,
              "public": 111,
              "scripthash": 196,
            },
            "wif": 239,
          },
          "explorerUrls": Object {
            "blockcypher": "https://live.blockcypher.com/btc-testnet",
            "blockstream": "https://blockstream.info/testnet",
            "smartbit": "https://testnet.smartbit.com.au",
          },
          "id": "testnet",
          "name": "Testnet",
          "unitPrefix": "t",
        },
      },
    },
  }
`;

exports[`reducers infoReducer should handle initial state 1`] = `
Object {
  "chain": null,
  "chains": Object {
    "bitcoin": Object {
      "name": "Bitcoin",
    },
  },
  "data": Object {},
  "hasSynced": undefined,
  "infoLoaded": false,
  "infoLoading": false,
  "network": null,
  "networks": Object {
    "bitcoin": Object {
      "mainnet": Object {
        "bitcoinJsNetwork": Object {
          "bech32": "bc",
          "bip32": Object {
            "private": 76066276,
            "public": 76067358,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 8333,
          "portRpc": 8332,
          "protocol": Object {
            "magic": 3652501241,
          },
          "pubKeyHash": 0,
          "scriptHash": 5,
          "seedsDns": Array [
            "seed.bitcoin.sipa.be",
            "dnsseed.bluematt.me",
            "seed.bitcoinstats.com",
            "seed.bitcoin.jonasschnelli.ch",
            "seed.btc.petertodd.org",
            "seed.bitcoin.sprovoost.nl",
            "dnsseed.emzy.de",
          ],
          "testnet": false,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 76066276,
              "public": 76067358,
            },
            "bip44": 0,
            "private": 128,
            "public": 0,
            "scripthash": 5,
          },
          "wif": 128,
        },
        "explorerUrls": Object {
          "blockcypher": "https://live.blockcypher.com/btc",
          "blockstream": "https://blockstream.info",
          "smartbit": "https://www.smartbit.com.au",
        },
        "id": "mainnet",
        "name": "Mainnet",
        "unitPrefix": "",
      },
      "regtest": Object {
        "bitcoinJsNetwork": Object {
          "bech32": "bcrt",
          "bip32": Object {
            "private": 70615956,
            "public": 70617039,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "0f9188f13cb7b2c71f2a335e3a4fc328bf5beb436012afca590b1a11466e2206",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 18444,
          "portRpc": 18332,
          "protocol": Object {
            "magic": 3669344250,
          },
          "pubKeyHash": 111,
          "scriptHash": 196,
          "seedsDns": Array [],
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 196,
          },
          "wif": 239,
        },
        "explorerUrls": Object {
          "blockcypher": "https://live.blockcypher.com/btc",
          "blockstream": "https://blockstream.info",
          "smartbit": "https://www.smartbit.com.au",
        },
        "id": "regtest",
        "name": "Regtest",
        "unitPrefix": "r",
      },
      "simnet": Object {
        "bitcoinJsNetwork": Object {
          "bech32": "sb",
          "bip32": Object {
            "private": 69253376,
            "public": 69254458,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "f67ad7695d9b662a72ff3d8edbbb2de0bfa67b13974bb9910d116d5cbd863e68",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 18555,
          "portRpc": 18556,
          "protocol": Object {
            "magic": 3669344250,
          },
          "pubKeyHash": 63,
          "scriptHash": 123,
          "seedsDns": Array [],
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 69253376,
              "public": 69254458,
            },
            "bip44": 115,
            "private": 100,
            "public": 63,
            "scripthash": 123,
          },
          "wif": 100,
        },
        "explorerUrls": Object {
          "blockcypher": "https://live.blockcypher.com/btc",
          "blockstream": "https://blockstream.info",
          "smartbit": "https://www.smartbit.com.au",
        },
        "id": "simnet",
        "name": "Simnet",
        "unitPrefix": "s",
      },
      "testnet": Object {
        "bitcoinJsNetwork": Object {
          "bech32": "tb",
          "bip32": Object {
            "private": 70615956,
            "public": 70617039,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000933ea01ad0ee984209779baaec3ced90fa3f408719526f8d77f4943",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 18333,
          "portRpc": 18332,
          "protocol": Object {
            "magic": 118034699,
          },
          "pubKeyHash": 111,
          "scriptHash": 196,
          "seedsDns": Array [
            "testnet-seed.alexykot.me",
            "testnet-seed.bitcoin.schildbach.de",
            "testnet-seed.bitcoin.petertodd.org",
            "testnet-seed.bluematt.me",
          ],
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 196,
          },
          "wif": 239,
        },
        "explorerUrls": Object {
          "blockcypher": "https://live.blockcypher.com/btc-testnet",
          "blockstream": "https://blockstream.info/testnet",
          "smartbit": "https://testnet.smartbit.com.au",
        },
        "id": "testnet",
        "name": "Testnet",
        "unitPrefix": "t",
      },
    },
  },
}
`;
